terraform/sg.tf
# Load balancer security group 
resource "aws_security_group" "lb" {
  name   = "load-balancer-security-group"
  vpc_id = aws_vpc.ecs.id

# Ingress rule to allow all HTTP traffic
  ingress {
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# ECS security group
resource "aws_security_group" "ecs" {
  name   = "ecs-security-group"
  vpc_id = aws_vpc.ecs.id

# Ingress rule to allow traffic only from load balancer's security group
  ingress {
    protocol        = "tcp"
    from_port       = 80
    to_port         = 80
    security_groups = [aws_security_group.lb.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
